fixed styling issues with how the logo and navbar looked on mobile

--- a/src/styles/NavigationBar.css
+++ b/src/styles/NavigationBar.css
@@ -13,12 +13,10 @@
 
 @media (max-width: 454px) {
   #logo {
-    /* width: 200px; */
+    width: 170px;
   }
-}
 
-@media (max-width: 404px) {
-  #logo {
-    /* width: 216px; */
+  .navbar-nav {
+    text-align: right;
   }
 }
